# ProteoGNN-Web

./: .replit  README.md  features.py  graph_builder.py  main.py  model.py  pyproject.toml  replit.nix  requirements.txt
templates/: index.html
