[project]
name = "proteognn-webapp"
version = "1.0.0"
description = "ProteoGNN - Protein Misfolding Prediction Web Application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.3.0",
    "gunicorn>=21.0.0",
    "werkzeug>=2.3.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
]

[project.scripts]
proteognn-web = "main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["proteognn_webapp"]

[tool.ruff]
line-length = 100
target-version = "py39"
